Remove padding from notion frame to fix flickering sticky header

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -382,3 +382,7 @@
 .notion-block-260baa77f1e1428b97fb14ac99c7c385 {
   display: none;
 }
+
+.notion-frame {
+  padding: 0;
+}
